Fix spinner location on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -482,7 +482,7 @@ li {
     /* border: 1px solid black; */
     box-sizing: border-box;
     position: absolute;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     left: 50%;
-    top: 50%;
+    bottom: 30%;
 }
